--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <title>ОГІРОК Воргебирштраубе</title>
 </head>
 <body>
+
    <main>
 <section class='main_element'>
    <div class="container">
@@ -172,19 +173,21 @@
       </header>
       <div class="gallery">
          <div class="gallery_elements">
+            <div class="gallery_sector">
             <img src="assets/Photo 03.png" alt="огірки на гілці" class="gallery_img">
             <img src="assets/Photo 01.png" alt="зелені огірки" class="gallery_img">
             <img src="assets/Photo 02.png" alt="огірки у кошику" class="gallery_img">
             <img src="assets/Photo 03.png" alt="огірки на гілці" class="gallery_img">
             <img src="assets/Photo 01.png" alt="зелені огірки" class="gallery_img">
          </div>
+         </div>
    <div class="gallery_control">
-      <div id='gallery_backward' class="controls_element">
+      <button id='gallery_backward' class="controls_element">
          <img src="/assets/svg/button_back.svg" alt="">
-      </div>
-      <div id='gallery_forward' class="controls_element">
+      </button>
+      <button id='gallery_forward' class="controls_element">
          <img src="/assets/svg/button_forw.svg" alt="">
-      </div>
+      </button>
    </div>
       </div>
    </div>
@@ -375,8 +378,7 @@
       </div>
     </div>
 </body>
-<script src="/js/script.js"></script>
+<script src="/js/carousel.js"></script>
 <script src="/js/modal.js"></script>
-<script src="/js/carousel_main.js"></script>
 <script src="/js/carousel_second.js"></script>
 </html>
