--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Lora:wght@600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Огурки</title>
+    <title>Сторінка Дякую</title>
   </head>
   <body>
     <main>
